--- a/src/components/Navbar/styles.scss
+++ b/src/components/Navbar/styles.scss
@@ -10,6 +10,7 @@
   position: absolute;
   width: 100vw;
   z-index: 1;
+  
   @media(max-width: $tablet) {
     grid-template-areas:
       'logo logo'
@@ -35,20 +36,21 @@
   display: flex;
   justify-content: flex-start;
   gap: 20px;
+
   @media(max-width: $tablet) {
     justify-self: start;
   }
 }
 
 .link {
-  color: #fff;
-  font-size: 22px;
+  color: white;
+  font-size: 18px;
 }
 
 .search {
   align-items: center;
   display: flex;
-  grid-area: busca;
+  grid-area: search;
   width: 100%;
 }
 
@@ -62,9 +64,4 @@
   gap: 20px;
   grid-area: icons;
   margin-left: 30px;
-}
-
-.icon {
-  color: #fff;
-  size: 24;
 }
