--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -1,12 +1,14 @@
+@import '../../styles/index.scss';
+
 .home-header {
   padding-bottom: 250px;
 }
 
 .categories {
-  align-items: center;
   display: flex;
+  align-items: center;
   flex-direction: column;
-  padding: 0 100px 0;
+  padding: 0 16px 0;
   transform: translateY(-250px);
 
   h2 {
@@ -28,6 +30,7 @@
       cursor: pointer;
       display: flex;
       flex-direction: column;
+      gap: 10px;
 
       h3 {
         color: #041833;
